--- a/config.properties
+++ b/config.properties
@@ -1,6 +1,5 @@
-link.for.compare = selenide.org/
+link.for.compare = https://selenide.org/
 web.searcher = http://google.com/ncr
 string.for.search = selenide
 browser.environment=chrome
-os.environment=windows
-
+windows.chrome.driver.path=drivers/chrome/windows/chromedriver.exe
